@@ -19,6 +19,7 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -85,7 +86,7 @@ public class SysAreaController extends BaseController<SysArea, ISysAreaService> 
             String downloadFileName = fileName + suffix;
             byte[] bytes = ExcelUtil.export(fileName, fileName, entity, list);
 
-            response.setHeader("Content-Disposition", "attachment;fileName=" + java.net.URLEncoder.encode(downloadFileName, "UTF-8"));
+            response.setHeader("Content-Disposition", "attachment;fileName=" + java.net.URLEncoder.encode(downloadFileName, StandardCharsets.UTF_8));
             response.getOutputStream().write(bytes);
 
         } catch (IOException e) {
